--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: "The high quality, completely customizable, performant and 100% free blog template for Jekyll"
-description: "Chalk uses all the best tools and merges them into one premium blogging theme."
+title: "The personal software developer's blog"
+description: "Personal blog with stories on different tech and non-tech topics"
 ---
 
 <ul class="article-list">
